--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "ES6 version of basic-mmo-phaser by Jerome Renaux",
   "main": "server.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "nodemon server.js --exec babel-node --presets es2015,stage-2",
+    "dev-server": "webpack --progress --colors"
   },
   "repository": {
     "type": "git",
@@ -18,6 +19,19 @@
   "homepage": "https://github.com/TVScoundrel/mmo-phaser-es6#readme",
   "dependencies": {
     "express": "^4.15.3",
+    "phaser": "^2.6.2",
     "socket.io": "^2.0.1"
+  },
+  "devDependencies": {
+    "babel-cli": "^6.24.1",
+    "babel-core": "^6.24.1",
+    "babel-loader": "^7.0.0",
+    "babel-preset-es2015": "^6.24.1",
+    "babel-preset-stage-2": "^6.24.1",
+    "babel-register": "^6.24.1",
+    "html-webpack-plugin": "^2.28.0",
+    "mocha": "^3.4.1",
+    "nodemon": "^1.11.0",
+    "webpack": "^2.5.1"
   }
 }
