--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "server.js",
   "scripts": {
     "start": "nodemon server.js --exec babel-node --presets es2015,stage-2",
-    "dev-server": "webpack --progress --colors"
+    "dev": "webpack --progress --colors"
   },
   "repository": {
     "type": "git",
